--- a/src/layout/VSection/styles.css
+++ b/src/layout/VSection/styles.css
@@ -1,7 +1,7 @@
 .v-section {
     height: 100%;
     padding: 20px;
-    width: 33%;
+    flex: 1;
     margin-right: 10px;
     margin-left: 10px;
 }
