display artist metadata

--- a/src/layout/Home/home.css
+++ b/src/layout/Home/home.css
@@ -8,13 +8,30 @@
 }
 
 .main {
-    flex: 1.5;
+    flex: 1.2;
     padding: 20px;
+}
+
+.card {
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .row {
     display: flex;
     flex-direction: row;
+}
+
+.row a {
+    color: #2C3E50;
+    margin-right: 5px;
+    margin-top: 10px;
+}
+
+.row p:last-child {
+    margin-top: 20px;
 }
 
 .column {
@@ -26,4 +43,5 @@
     height: 200px;
     width: 200px;
     margin-right: 20px;
+    border-radius: 100px;
 }
