--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -2,5 +2,10 @@
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 8px;
+    margin-bottom: 30px;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+card:hover {
+    cursor: pointer;
 }
