--- a/src/components/Searchbox/searchbox.css
+++ b/src/components/Searchbox/searchbox.css
@@ -1,9 +1,24 @@
 .input-field {
     background-color: #fff;
     padding: .7em;
-    width: 100%;
+    width: 73%;
     height: 50px;
     border-radius: 8px;
     border: 0.5px solid #ccc;
     margin-bottom: 20px;
+}
+
+.button {
+    width: 25%;
+    height: 50px;
+    border-radius: 8px;
+    border: 1px solid #1D5AF2ED;
+    background-color: #1D5AF2ED;
+    color: #fff;
+}
+
+.row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
