--- a/src/components/Artist/artist.css
+++ b/src/components/Artist/artist.css
@@ -5,18 +5,18 @@
     border-radius: 100px;
 }
 
-.row {
+.artist {
     display: flex;
     flex-direction: row;
 }
 
-.row a {
+.artist a {
     color: #2C3E50;
     margin-right: 5px;
     margin-top: 10px;
 }
 
-.row p:last-child {
+.artist p:last-child {
     margin-top: 20px;
 }
 
