--- a/src/components/Searchbox/searchbox.css
+++ b/src/components/Searchbox/searchbox.css
@@ -15,10 +15,26 @@
     border: 1px solid #1D5AF2ED;
     background-color: #1D5AF2ED;
     color: #fff;
+    padding: 0px 10px;
 }
 
 .row {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+@media only screen and (max-width: 992px) {
+    .row {
+        flex-direction: column;
+    }
+
+    .input-field {
+        width: 100%;
+    }
+
+    .button {
+        width: 100%;
+    }
 }
