--- a/src/layout/Home/home.css
+++ b/src/layout/Home/home.css
@@ -12,23 +12,26 @@
     padding: 20px;
 }
 
-.row {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-.column {
-    display: flex;
-    flex-direction: row;
-}
-
 .events-container {
     overflow: auto;
-    height: 70vh;
+    max-height: 70vh;
+    padding-bottom: 25%;
 }
 
 .event-banner {
     width: 100%;
+}
+
+@media only screen and (max-width: 992px) {
+    .container {
+        flex-direction: column;
+        width: 100vw;
+        overflow: scroll;
+        height: fit-content;
+    }
+
+    .events-container {
+        max-height: 70vh;
+    }
 }
 
